--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		
+		<a href="https://www.youtube.com/watch?v=Grr0FlC8SQA">My current favourite song is Kalank</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
